RESOLVED FIXED155416
Negative outline offset could break curved outline-style: auto
https://bugs.webkit.org/show_bug.cgi?id=155416
Summary Negative outline offset could break curved outline-style: auto
alan
Reported 2016-03-13 18:24:04 PDT
when the abs(offset) value is higher than the border radius value.
Attachments
Patch (4.80 KB, patch)
2016-03-13 19:40 PDT, alan
thorton: review+
alan
Comment 1 2016-03-13 19:40:19 PDT
Tim Horton
Comment 2 2016-03-14 10:11:41 PDT
Comment on attachment 273917 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=273917&action=review > Source/WebCore/platform/graphics/PathUtilities.cpp:439 > + FloatSize adjustedRadius = radius; I think you can expandedTo/shrunkTo here.
alan
Comment 3 2016-03-14 11:12:48 PDT
Note You need to log in before you can comment on or make changes to this bug.