Negative outline offset could break curved outline-style: auto https://bugs.webkit.org/show_bug.cgi?id=155416

Reviewed by Tim Horton.

When radius becomes negative the rounded rect could end up being un-renderable -> no rounded corners at all.

Source/WebCore:

Test: fast/inline/hidpi-outline-auto-negative-offset-with-border-radius.html

* platform/graphics/PathUtilities.cpp:
(WebCore::adjustedtRadiiForHuggingCurve):

LayoutTests:

* fast/inline/hidpi-outline-auto-negative-offset-with-border-radius-expected.html: Added.
* fast/inline/hidpi-outline-auto-negative-offset-with-border-radius.html: Added.

Canonical link: https://commits.webkit.org/173559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198142 268f45cc-cd09-0410-ab3c-d52691b4dbfc